feat: TSYSTEMS-196 Upgrade to version 3.1